fix(aesthetics): :wrench: Fix issue with white gap between navbar and main body on large screens.

--- a/src/App.css
+++ b/src/App.css
@@ -84,7 +84,7 @@
 body {
   margin: 0;
   padding: 0;
-  margin-top: -40px;
+  margin-top: -3em;
   overflow-x: hidden;
 }
 
